[package]
name = "re_zenoh_bridge"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
description = "Deserializes CDR payloads from Zenoh and logs Rerun archetypes for ROS2 visualization"

[lints]
workspace = true

[dependencies]
re_log.workspace = true
re_log_types.workspace = true
re_mcap.workspace = true
re_sdk.workspace = true
re_sdk_types.workspace = true
re_zenoh_subscriber.workspace = true

anyhow.workspace = true
byteorder.workspace = true
